<?xml version="1.0"?>
<package format="2">
  <name>cybergear_controller</name>
  <version>0.0.1</version>
  <description>The cybergear_controller package</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cybergear_controller_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cybergear_controller_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
